force-app/main/default/objects/Opportunity_Setting__c/Opportunity_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom opportunity setting configuration</description>
    <label>Opportunity Setting</label>
</CustomObject>