force-app/main/default/objects/Opportunity_Setting__c/fields/Price_Book_Ids__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Ids__c</fullName>
    <label>Price Book Ids</label>
    <type>TextArea</type>
</CustomField>