force-app/main/default/objects/Opportunity_Setting__c/fields/Product_Names_For_Old_logic__c.field-meta.xml
<CustomField>
    <fullName>Product_Names_For_Old_logic__c</fullName>
    <label>Product Names For Old logic</label>
    <type>TextArea</type>
</CustomField>