force-app/main/default/objects/Opportunity_Setting__c/fields/Record_Type_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Group_Name__c</fullName>
    <label>Record Type Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>